--- a/ARMCafeAdmin/App.config
+++ b/ARMCafeAdmin/App.config
@@ -13,9 +13,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="DBEntity" connectionString="metadata=res://*/DBEntity.csdl|res://*/DBEntity.ssdl|res://*/DBEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AIS-LAPTOP\SQLEXPRESS;initial catalog=HMS;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="DBEntity" connectionString="metadata=res://*/DBModels.DBEntity.csdl|res://*/DBModels.DBEntity.ssdl|res://*/DBModels.DBEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AIS-LAPTOP\SQLEXPRESS;initial catalog=HMS;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
